--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
     <div class="nav-bar"></div>
 
     <div id="app">
-        <h1>{{ product }}</h1>
-        <h2>{{ description }}</h2>
+        <div class="product">
+
+            <div class="product-image">
+                <img src="" alt="">
+            </div>
+
+            <div class="product-info">
+                <h1>{{ product }}</h1>
+                <h2>{{ description }}</h2>
+            </div>
+            
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
