--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <div class="product">
 
             <div class="product-image">
-                <img src="" alt="">
+                <img v-bind:src="image" :alt="alt">
             </div>
 
             <div class="product-info">
                 <h1>{{ product }}</h1>
                 <h2>{{ description }}</h2>
             </div>
-            
+
         </div>
     </div>
 
