--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <div class="product-info">
                 <h1>{{ product }}</h1>
                 <h2>{{ description }}</h2>
+                <p>
+                    <a :href="sockHref" target="_blank">Sock Dreams</a>
+                </p>
             </div>
 
         </div>
