--- a/index.html
+++ b/index.html
@@ -21,9 +21,18 @@
             <div class="product-info">
                 <h1>{{ product }}</h1>
                 <h2>{{ description }}</h2>
+                <p v-if="inStock && inventory > 10">In Stock</p>
+                <p v-else-if="inStock && inventory > 0 && inventory <= 10">Almost Sold Out</p>
+                <p v-else>Out of Stock</p>
+                <p v-show="showMe">Show Me</p>
+                <p v-if="onSale">On Sale!!</p>
                 <p>
                     <a :href="sockHref" target="_blank">Sock Dreams</a>
                 </p>
+
+                <ul>
+                    <li v-for="detail in details">{{ detail }}</li>
+                </ul>
             </div>
 
         </div>
