--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h2>{{ description }}</h2>
                 <p v-if="inStock && inventory > 10">In Stock</p>
                 <p v-else-if="inStock && inventory > 0 && inventory <= 10">Almost Sold Out</p>
-                <p v-else>Out of Stock</p>
+                <p v-else :class="{outOfStock: !inStock}">Out of Stock</p>
                 <p v-show="showMe">Show Me</p>
                 <p v-if="onSale">On Sale!!</p>
                 <p>
@@ -40,11 +40,20 @@
 
                 </ul>
                 
-                <div v-for="variant in variants" :key=""variant.variantId>
-                    <p @mouseover="updateProduct(variant.variantImage)">{{ variant.variantColor }}</p>
+                <div v-for="variant in variants"
+                    :key=""variant.variantId
+                    class="color-box"
+                    :style="{ backgroundColor: variant.variantColor }"
+                    @mouseover="updateProduct(variant.variantImage)"
+                    >
+                    <!-- <p @mouseover="updateProduct(variant.variantImage)">{{ variant.variantColor }}</p> -->
                 </div>
 
-                <button v-on:click="addToCart">Add to Cart</button>
+                <button
+                    v-on:click="addToCart"
+                    :disabled="!inStock || cart === inventory"
+                    :class="{ disabledButton: !inStock }"
+                    >Add to Cart</button>
                 <button 
                     v-show="cart > 0"
                     @click="removeFromCart">Remove One Item from Cart</button>
