--- a/index.html
+++ b/index.html
@@ -12,58 +12,11 @@
     <div class="nav-bar"></div>
 
     <div id="app">
-        <div class="product">
-
-            <div class="product-image">
-                <img v-bind:src="image" :alt="alt">
-            </div>
-
-            <div class="product-info">
-                <h1>{{ title }}</h1>
-                <h2>{{ description }}</h2>
-                <p v-if="inStock && inventory > 10">In Stock</p>
-                <p v-else-if="inStock && inventory > 0 && inventory <= 10">Almost Sold Out</p>
-                <p v-else :class="{outOfStock: !inStock}">Out of Stock</p>
-                <p v-show="showMe">Show Me</p>
-                <p v-if="onSale">{{ saleMessage }}</p>
-                <p>
-                    <a :href="sockHref" target="_blank">Sock Dreams</a>
-                </p>
-
-                <ul>
-                    <li v-for="detail in details">{{ detail }}</li>
-
-                </ul>
-                
-                <ul>
-                    <li v-for="size in sizes">{{ size }}</li>
-
-                </ul>
-                
-                <div v-for="(variant, index) in variants"
-                    :key=""variant.variantId
-                    class="color-box"
-                    :style="{ backgroundColor: variant.variantColor }"
-                    @mouseover="updateProduct(index)"
-                    >
-                    <!-- <p @mouseover="updateProduct(variant.variantImage)">{{ variant.variantColor }}</p> -->
-                </div>
-
-                <button
-                    v-on:click="addToCart"
-                    :disabled="!inStock || cart === inventory"
-                    :class="{ disabledButton: !inStock }"
-                    >Add to Cart</button>
-                <button 
-                    v-show="cart > 0"
-                    @click="removeFromCart">Remove One Item from Cart</button>
-
-                <div class="cart">
-                    <p>Cart({{ cart }})</p>
-                </div>
-            </div>
-
-        </div>
+        <product :premium="premium">
+        </product>
+        <product-details :details="['80% cotton', '20% polyester', 'Gender-neutral']"></product-details>
+        <product></product>
+        <product></product>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
