--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
     <div class="nav-bar"></div>
 
     <div id="app">
-        <product :premium="premium">
+        <div class="cart">
+            <p>Cart({{ cart.length }})</p>
+        </div>
+
+        <product :premium="premium" :cart="cart" @add-to-cart="updateCart" @remove-from-cart="removeItem">
         </product>
         <product-details :details="['80% cotton', '20% polyester', 'Gender-neutral']"></product-details>
-        <product></product>
-        <product></product>
+        <!-- <product></product> -->
+        <!-- <product></product> -->
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
