add review form and error handling

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <product :premium="premium" :cart="cart" @add-to-cart="updateCart" @remove-from-cart="removeItem">
         </product>
-        <product-details :details="['80% cotton', '20% polyester', 'Gender-neutral']"></product-details>
+        <!-- <product-details :details="['80% cotton', '20% polyester', 'Gender-neutral']"></product-details> -->
         <!-- <product></product> -->
         <!-- <product></product> -->
     </div>
